erDiagram
    USERS ||--o{ PROJECTS : "assigned to"
    USERS ||--o{ TEST_RUNS : "initiates"
    PROJECTS ||--o{ TEST_SUITES : "contains"
    PROJECTS ||--o{ TEST_CASES : "contains"
    TEST_SUITES ||--o{ TEST_CASES : "contains"
    TEST_CASES ||--o{ TEST_STEPS : "contains"
    TEST_RUNS ||--o{ TEST_RESULTS : "produces"
    TEST_RUNS }|--o{ TEST_CASES : "executes"
    TEST_RESULTS ||--o{ TEST_STEP_RESULTS : "contains"
    TEST_RESULTS }|--|| TEST_CASES : "belongs to"
    TEST_STEP_RESULTS }|--|| TEST_STEPS : "belongs to"
    
    USERS {
        string id PK
        string name
        string email
        string role
        string avatar
    }
    
    PROJECTS {
        string id PK
        string name
        string description
        string status
        string priority
        array members
        date createdAt
        date updatedAt
    }
    
    TEST_CASES {
        string id PK
        string title
        string description
        string status
        string priority
        array steps
        array tags
        string projectId FK
        string createdBy FK
        date createdAt
        date updatedAt
    }
    
    TEST_STEPS {
        string id PK
        int order
        string action
        string target
        string value
        string description
        string expectedResult
        string type
        string testCaseId FK
    }
    
    TEST_SUITES {
        string id PK
        string name
        string description
        string status
        string priority
        int progress
        array testCases
        string projectId FK
        array tags
        string createdBy FK
        date createdAt
        date updatedAt
    }
    
    TEST_RUNS {
        string id PK
        string name
        string description
        string status
        string priority
        string projectId FK
        string testSuiteId FK
        array testCaseIds
        string environment
        array browsers
        date startTime
        date endTime
        int duration
        array results
        string createdBy FK
        date createdAt
        date updatedAt
    }
    
    TEST_RESULTS {
        string id PK
        string testRunId FK
        string testCaseId FK
        string testSuiteId FK
        string status
        date startTime
        date endTime
        int duration
        string environment
        string browser
        string errorMessage
        array steps
        date createdAt
    }
    
    TEST_STEP_RESULTS {
        string id PK
        string testResultId FK
        string testStepId FK
        int order
        string description
        string expectedResult
        string actualResult
        string status
        int duration
        date startTime
        date endTime
        string errorMessage
        string screenshot
        date createdAt
    }
